--- a/Lab3/css/styles.css
+++ b/Lab3/css/styles.css
@@ -23,3 +23,34 @@ header h1 {
     text-shadow: 2px 2px 2px #000;
 }
 
+#container {
+    background-color: #86A6A3;
+    margin: 20px;
+}
+
+main {
+    margin: 10px;
+}
+
+.col {
+    background-color: #F2A2A2;
+    padding: 10px;
+    border: 4px solid #F0F2DF;
+    border-radius: 20px;
+    margin: 20px 0;
+}
+
+.col h2 {
+    text-align: center;
+    font-size: 2 em;
+    color: #F0F2DF;
+    text-shadow: 2px 2px 2px #000;
+}
+
+.col img {
+    width: 50%;
+}
+
+.main_img {
+    display: none;
+}
