--- a/Lab3/css/styles.css
+++ b/Lab3/css/styles.css
@@ -54,3 +54,27 @@ main {
 .main_img {
     display: none;
 }
+
+footer {
+    padding: 60px 0;
+    text-align: center;
+    color:#F0F2DF;
+    border-top: 4px solid #F0F2DF;
+}
+
+/* Tablet View */
+@media(min-width: 768px) {
+    header h1 {
+        font-size: 3em;
+    }
+    
+    #container {
+        border-radius: 20px;
+        border: 4px solid #F0F2DF;
+    }
+    
+    .col {
+        width: 65%;
+        margin: 20px auto;
+    }
+}
