--- a/Lab3/css/styles.css
+++ b/Lab3/css/styles.css
@@ -96,5 +96,9 @@ footer {
         margin: 0 20px;
     }
 
-    
+    .main_img {
+        display: block;
+        width: 25%;
+        margin-top: 30px;
+    }
 }
