--- a/lab4/css/style.css
+++ b/lab4/css/style.css
@@ -16,6 +16,12 @@ img {
     border: 4px solid #D7D9D7;
 }
 
+header {
+    background-image: url("../images/gcourse1.jpg");
+    background-size: cover;
+    padding: 60px 0;
+}
+
 nav, section, aside, .col, footer {
     background-color: #D7D9D7;
     padding: 20px;
@@ -23,6 +29,8 @@ nav, section, aside, .col, footer {
     border-radius: 10px;
     border: 4px solid #2E5559;
 }
+
+
 /* Tablet Styles */
 
 
