--- a/lab4/css/style.css
+++ b/lab4/css/style.css
@@ -22,6 +22,12 @@ header {
     padding: 60px 0;
 }
 
+header h1 {
+    color:#D7D9D7;
+    text-shadow: 2px 2px 2px #000;
+    text-align: center;
+}
+
 nav, section, aside, .col, footer {
     background-color: #D7D9D7;
     padding: 20px;
