--- a/lab4/css/style.css
+++ b/lab4/css/style.css
@@ -39,6 +39,15 @@ nav li {
 
 nav li a {
     display: block;
+    background-color: #2E5559;
+    color: #D7D9D7;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    margin: 10px 0;
+    text-decoration: none;
+    font-size: 1.2em;
+    border-radius: 10px;
 }
 
 nav, section, aside, .col, footer {
