--- a/lab4/css/style.css
+++ b/lab4/css/style.css
@@ -77,6 +77,22 @@ nav li a:hover, .button:hover {
     text-shadow: 1px 1px 1px #000;
 }
 
+h2, h3 {
+    color: #000;
+    text-shadow: 1px 1px 1px #000;
+    text-align: center;
+    font-size: 1.em;
+}
+
+section img, aside img {
+    width: 65%;
+}
+
+footer {
+    padding: 20px 0;
+    text-align: center;
+    color: #2E5559;
+}
 /* Tablet Styles */
 
 
