--- a/lab4/css/style.css
+++ b/lab4/css/style.css
@@ -1,4 +1,5 @@
 /* Global Styles */
+
 body {
     background-color: #2E5559;
 }
@@ -10,6 +11,7 @@ img {
 }
 
 /* Mobile Styles */
+
 #container {
     background-color: #688C71;
     margin: 10px;
@@ -93,7 +95,31 @@ footer {
     text-align: center;
     color: #2E5559;
 }
+
 /* Tablet Styles */
 
+@media(min-width: 768px) {
+    header {
+        padding: 125px;
+    }
+
+    header h1 {
+        font-size: 3em;
+    }
+
+    nav {
+        text-align: center;
+    }
+
+    nav li {
+        display: inline-block;
+    }
+
+    nav li a {
+        height: 50px;
+        line-height: 50px;
+        width: 200px;
+    }
+}
 
 /* Desktop Styles */
