--- a/lab4/css/style.css
+++ b/lab4/css/style.css
@@ -134,6 +134,14 @@ footer {
         width: 50%;
     }
 
+    .col img {
+        width: 60%;
+        border-radius: 10px;
+        border: 4px solid #2E5559;
+    }
+
+
+
 }
 
 /* Desktop Styles */
