--- a/lab4/css/style.css
+++ b/lab4/css/style.css
@@ -139,7 +139,19 @@ footer {
         border-radius: 10px;
         border: 4px solid #2E5559;
     }
-
 }
 
 /* Desktop Styles */
+
+@media(min-width: 1024px) {
+    #container {
+        width: 75%;
+        margin: 20px auto;
+        border: 4px solid #D7D9D7;
+        border-radius: 20px;
+    }
+
+    header {
+        border-radius: 20px 20px 0 0;
+    }
+}
