--- a/lab4/css/style.css
+++ b/lab4/css/style.css
@@ -154,4 +154,12 @@ footer {
     header {
         border-radius: 20px 20px 0 0;
     }
+
+    nav li a {
+        margin: 0 20px;
+    }
+
+    #lower_flex {
+        display: flex;
+    }
 }
