--- a/lab4/css/style.css
+++ b/lab4/css/style.css
@@ -21,7 +21,7 @@ img {
 header {
     background-image: url("../images/gcourse1.jpg");
     background-size: cover;
-    padding: 60px 0;
+    padding: 70px 0;
 }
 
 header h1 {
@@ -49,7 +49,13 @@ nav li a {
     margin: 10px 0;
     text-decoration: none;
     font-size: 1.2em;
+    margin: 10px 0;
     border-radius: 10px;
+}
+
+nav li a:hover {
+    background-color: #688C71;
+    text-shadow: 2px 2px 2px #000;
 }
 
 nav, section, aside, .col, footer {
