--- a/lab4/css/style.css
+++ b/lab4/css/style.css
@@ -82,13 +82,19 @@ section img, aside img {
     background-color: #2E5559;
     color: #D7D9D7;
     height: 40px;
-    width: 175px;
+    width: 100px;
     line-height: 40px;
     text-align: center;
     margin: 10px auto;
     text-decoration: none;
-    font-size: 1.2em;
+    font-size: 1em;
     border-radius: 10px;
+}
+
+.button:hover {
+    background-color: #688C71;
+    text-shadow: 2px 2px 2px #000;
+}
 }
 
 footer {
